# Portfolio

./: Dashboard 2 - SDG conference Dashboard.pbix  README.md  data_analysis_MichonGoddijn.ipynb
Year 2 Block D/: README.md  docker-compose.yml  pyproject.toml
Year 2 Block D/Azure_edo/airflow/: .env  airflow.cfg  airflow.db  compose.yaml  requirements.txt
Year 2 Block D/Azure_edo/airflow/Pipeline/: Pipeline_C.py  component.py  data_ingestion.py  deploy.py  deploy_model.py  emotion_utils.py  evaluate.py  get_best_model_comp.py  preprocessing.py  raw_data_source.py  register_components.py  register_model.py  requirement.txt  (+6 more)
Year 2 Block D/Frontend/: .env  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts
Year 2 Block D/Frontend/src/: App.tsx  index.css  main.tsx
Year 2 Block D/docker/: Dockerfile  start.sh
Year 2 Block D/emotion_mvp/: __init__.py  classifier.py  cli.py  cli_main.py  config.py  data_loader.py  detector.py  emotion_tiers.py  history.py  inference.py  log.py  pipeline.py  prompts.py  transcriber.py  translator.py
Year 2 Block D/emotion_mvp/api/: main.py  plan_gate.py
Year 2 Block D/emotion_mvp/data/: inference_2025-06-25_03-21-08.csv  inference_2025-06-25_14-36-38.csv  inference_2025-06-25_14-37-48.csv  inference_2025-06-25_15-34-55.csv
Year 2 Block D/tests/: test_api_main.py  test_api_plan_gate.py  test_classifier.py  test_cli.py  test_cli_main.py  test_config.py  test_data_loader.py  test_detector.py  test_emotion_tiers.py  test_history.py  test_inference.py  test_loader.py  test_log.py  test_pipeline.py  test_plan_gate.py  test_prompts.py  test_transcriber.py  test_translator.py
(+68 files in other folders)
